--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "joystix";
+  src: url("joystix.otf");
+}
+
 /* fixes cell stacking issues by making each cell exactly 14px wide */
 * {
   box-sizing: border-box;
@@ -6,6 +11,7 @@
 body {
   background-image: url(./darkness.png);
   background-repeat: repeat;
+  font-family: joystix, monospace;
 }
 .cell {
   display: inline-block;
@@ -36,6 +42,9 @@ h4 {
   margin-top: 10px;
 }
 
+h1 {
+  font-size: 5rem;
+}
 h4 {
   margin-top: 0px;
 }
