--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   background-image: url(./darkness.png);
   background-repeat: repeat;
   font-family: joystix, monospace;
+  text-align: center;
 }
 .cell {
   display: inline-block;
@@ -55,4 +56,8 @@ h4 {
   margin: auto;
   box-shadow: 0px 0px 20px white;
   margin-top: 20px;
+}
+
+button {
+  text-align: center;
 }
