--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ h4 {
 
 h1 {
   font-size: 5rem;
+  margin-bottom: 0.5rem;
 }
 h4 {
   margin-top: 0px;
@@ -53,11 +54,17 @@ h4 {
 .grid {
   width: 150px;
   line-height: 0;
-  margin: auto;
+  margin: 1.5rem auto;
   box-shadow: 0px 0px 20px white;
-  margin-top: 20px;
 }
 
 button {
   text-align: center;
+  padding: 0.5rem 1rem;
+  font-family: "joystix";
+  font-size: 1rem;
+  background-color: black;
+  color: limegreen;
+  border-radius: 14px;
+  margin: 0.5rem 1rem;
 }
